corrected guide bar not showing tip of scroll bar issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --btn-hover: rgba(0, 0, 0, 0.1);
   --btn-select: #000;
   --guide-normal: 15rem;
-  --guide-small: 4rem;
+  --guide-small: 72px;
   --backdrop: rgba(0, 0, 0, 0.5);
 }
 
